2003-11-20  Jani Monoses <jani@iv.ro>
	
	tests/flash1.c: Update flash_init() call to reflect
	new prototype.
	
2002-01-23  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/flash_synth.cdl: Add CYGMEM_FLASH_SYNTH_BASE to allow
	imposition of base address.
	Add CYGSEM_FLASH_SYNTH_FILE_WRITEBACK to allow changes to be
	reflected in the underlying file.
	* src/synth.c (flash_hwr_init): Implement CYGMEM_FLASH_SYNTH_BASE and
	CYGSEM_FLASH_SYNTH_FILE_WRITEBACK using appropriate args to mmap().
	Include <string.h> to avoid warning.

2002-01-11  Jonathan Larmour  <jlarmour@redhat.com>

	* src/synth.c (flash_hwr_init): Initialize to 0xff if the file
	needs creating.
	* cdl/flash_synth.cdl: requires errno codes.

2002-01-08  Jonathan Larmour  <jlarmour@redhat.com>
2001-11-1  Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* First version. Implements synthetic flash for the synthetic 
	  target. 
 	
//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros